# raytracer

./: .gitignore  .info  CMakeLists.txt  Cargo.toml  Doxyfile  Makefile  build.rs  scene.cfg  scene_light.cfg  scene_no_light.cfg
.github/workflows/: mirror.yml
cmake/config/exceptions/: arguments.json  dynamiclibrary.json  global.json  raytracer.json
include/raytracer/: Define.hpp  DynamicLibrary.hpp  Raytracer.hpp  Struct.hpp
include/raytracer/cameras/: ACamera.hpp  Camera.hpp  Camera2D.hpp  CameraFOV.hpp  ICamera.hpp  Viewer.hpp
include/raytracer/lights/: ALight.hpp  Ambient.hpp  Directional.hpp  Global.hpp  ILight.hpp  Plane.hpp  Point.hpp  Spot.hpp
include/raytracer/materials/: AMaterial.hpp  Default.hpp  IMaterial.hpp  RGB.hpp
include/raytracer/objects/: AObject.hpp  Cone.hpp  Cylinder.hpp  IObject.hpp  Object.hpp  Plane.hpp  Point.hpp  Sphere.hpp
include/raytracer/rays/: ARay.hpp  IRay.hpp  LightRay.hpp  Ray.hpp
include/raytracer/shaders/: AShader.hpp  Default.hpp  IShader.hpp  Noise.hpp
include/raytracer/special/: Sky.hpp  Utils.hpp
include/utils/: utils.hpp
include/utils/attribute/: c++14.hpp  c++17.hpp  c++20.hpp
include/utils/exception/: AException.hpp  ExceptionDefine.hpp  IException.hpp  generated_exception_header.hpp
include/utils/exception/basic/: ErrorException.hpp
include/utils/vector/: OVector2.hpp  OVector3.hpp  Vector2.hpp  Vector3.hpp
include/utils/warning/: Observer.hpp  SharedObject.hpp  UnsafeObserver.hpp
include/utils/write/: ANSI.hpp
raytracer/: Cargo.toml
raytracer/scenes/: scene.json
raytracer/src/: cli.rs  main.rs
raytracer/src/core/: camera.rs  color.rs  hit.rs  mod.rs  scene.rs
raytracer/src/lights/: directional.rs  light.rs  mod.rs
raytracer/src/math/: ray.rs  vec3.rs
raytracer/src/output/: ppm.rs
raytracer/src/parser/: config_types.rs  loader.rs  mod.rs  scene_builder.rs  scene_factory.rs
raytracer/src/primitives/: mod.rs  plane.rs  primitive.rs  sphere.rs
raytracer/src/renderer/: renderer.rs
src/: main.rs  plugins.rs
src-cpp/raytracer/: Raytracer.cpp  RaytracerInit.cpp  main.cpp
src-cpp/raytracer/cameras/: ACamera.cpp  lib.cpp
src-cpp/raytracer/cameras/camera2D/: Camera2D.cpp  lib.cpp
src-cpp/raytracer/cameras/cameraFOV/: lib.cpp
src-cpp/raytracer/cameras/viewer/: Viewer.cpp  lib.cpp
src-cpp/raytracer/lights/: lib.cpp
src-cpp/raytracer/lights/global/: Global.cpp  lib.cpp
src-cpp/raytracer/lights/plane/: Plane.cpp  lib.cpp
src-cpp/raytracer/lights/point/: Point.cpp  lib.cpp
src-cpp/raytracer/lights/spot/: Spot.cpp  lib.cpp
src-cpp/raytracer/materials/: AMaterial.cpp
src-cpp/raytracer/materials/default/: Default.cpp  lib.cpp
src-cpp/raytracer/objects/: AObject.cpp  lib.cpp
src-cpp/raytracer/objects/cone/: Cone.cpp  lib.cpp
src-cpp/raytracer/objects/cylinder/: Cylinder.cpp  lib.cpp
src-cpp/raytracer/objects/object/: Object.cpp  lib.cpp
src-cpp/raytracer/objects/plane/: Plane.cpp  lib.cpp
src-cpp/raytracer/objects/point/: Point.cpp  lib.cpp
src-cpp/raytracer/objects/sphere/: Sphere.cpp  lib.cpp
src-cpp/raytracer/rays/: ARay.cpp
src-cpp/raytracer/shaders/: lib.cpp
src-cpp/raytracer/shaders/default/: lib.cpp
src-cpp/raytracer/shaders/noise/: Noise.cpp  lib.cpp
src-cpp/raytracer/special/: Utils.cpp
src/config/: loader.rs  mod.rs
src/ffi/: bridge.rs  mod.rs  types.rs
src/raytracer/: DynamicLibrary.cpp  Raytracer.cpp  Raytracer.hpp  RaytracerAdv.cpp  RaytracerInit.cpp  camera.rs  gui.rs  main.cpp  mod.rs  objects.rs  ray.rs  structs.rs  tmp
src/raytracer/cameras/: ACamera.cpp  lib.cpp
src/raytracer/cameras/camera/: Camera.cpp  lib.cpp
src/raytracer/cameras/camera2D/: Camera2D.cpp  lib.cpp
src/raytracer/cameras/cameraFOV/: CameraFOV.cpp  lib.cpp
src/raytracer/cameras/viewer/: Viewer.cpp  lib.cpp
src/raytracer/lights/: ALight.cpp  lib.cpp
src/raytracer/lights/ambient/: Ambient.cpp  lib.cpp
src/raytracer/lights/directional/: Directional.cpp  lib.cpp
src/raytracer/lights/global/: Global.cpp
src/raytracer/lights/plane/: Plane.cpp  lib.cpp
src/raytracer/lights/point/: Point.cpp
src/raytracer/lights/spot/: Spot.cpp
src/raytracer/materials/: lib.cpp
src/raytracer/materials/default/: Default.cpp
src/raytracer/materials/rgb/: RGB.cpp  lib.cpp
src/raytracer/objects/: AObject.cpp  lib.cpp  mod.rs  sphere.rs
src/raytracer/objects/cone/: Cone.cpp
src/raytracer/objects/cylinder/: Cylinder.cpp  lib.cpp
src/raytracer/objects/object/: Object.cpp  lib.cpp
src/raytracer/objects/plane/: Plane.cpp
src/raytracer/objects/point/: Point.cpp  lib.cpp
src/raytracer/objects/sphere/: Sphere.cpp  lib.cpp
src/raytracer/rays/: ARay.cpp  LightRay.cpp  Ray.cpp
src/raytracer/special/: Utils.cpp
src/utils/: vector.rs
