[package]
name = "raytracer"
version = "0.1.0"
edition = "2024"

[dependencies]
colored = "3.1.1"
libc = "0.2.186"
libloading = "0.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full"] }
sfml = { version = "0.25.1", default-features = false, features = [
  "graphics",
  "window",
] }

[build-dependencies]
cmake = "0.1.58"
cargo-build = "1.0.0"
